# grounded-miniapp-platform

./: .env.example  .gitignore  APPLICATION_ARCHITECTURE_DETAILED.md  README.md  THESIS_ARCHITECTURE_IMPLEMENTATION_NOTES.md
platform/backend/: Dockerfile  pyproject.toml
platform/backend/app/: __init__.py  main.py
platform/backend/app/ai/: model_registry.py  openrouter_client.py
platform/backend/app/ai/prompts/: build_ir.md  grounded_spec.md  (+4 more)
platform/backend/app/api/: deps.py  routes_auth.py  routes_chat.py  routes_documents.py  routes_export.py  routes_files.py  routes_generation.py  routes_preview.py  routes_runs.py  routes_validation.py  routes_workspaces.py
platform/backend/app/core/: config.py
platform/backend/app/models/: app_ir.py  artifacts.py  common.py  domain.py  grounded_spec.py
platform/backend/app/repositories/: state_store.py
platform/backend/app/services/: check_runner.py  code_index_service.py  container.py  context_pack_builder.py  document_intelligence.py  export_service.py  fix_orchestrator.py  generation_service.py  interfaces.py  patch_service.py  platform_adapters.py  preview_service.py  run_service.py  runtime_manager.py  workspace_log_service.py  workspace_service.py
platform/backend/app/validators/: app_ir_validator.py  build_validator.py  connectivity_validator.py  grounded_spec_validator.py  platform_validator.py  suite.py
platform/backend/app/workers/: export_worker.py  generation_worker.py  preview_worker.py
platform/backend/tests/: conftest.py  test_api_smoke.py  test_backend_acceleration.py  test_contract_validators.py
(+135 files in other folders)
