[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-miniapp-platform-backend"
version = "0.1.0"
description = "Backend for the grounded mini-app generation platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.104,<1.0",
  "httpx>=0.25,<1.0",
  "pydantic>=2.12,<3.0",
  "uvicorn>=0.24,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
